--- a/css/style.css
+++ b/css/style.css
@@ -3215,7 +3215,7 @@ input[type="button"].btn-block {
 .dropdown-item:hover, .dropdown-item:focus {
   color: #16181b;
   text-decoration: none;
-  background-color: #f8f9fa;
+  background-color: #FFF;
 }
 
 .dropdown-item.active, .dropdown-item:active {
