update css color
update css color

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #0051ff;
+  --primary: #372b28;
   --secondary: #F2F1F8;
   --success: #28a745;
   --info: #17a2b8;
@@ -152,13 +152,13 @@ sup {
 }
 
 a {
-  color: #0051ff;
+  color: #372b28;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #0051ff;
+  color: #372b28;
   text-decoration: underline;
 }
 
@@ -2371,14 +2371,14 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #0051ff;
-  border-color: #0051ff;
+  background-color: #372b28;
+  border-color: #372b28;
 }
 
 .btn-primary:hover {
-  color: #fff;
-  background-color: #0b348b;
-  border-color: #0b348b;
+  color: #372b28;
+  background-color: #bfa890;
+  border-color: #bfa890;
 }
 
 .btn-primary:focus, .btn-primary.focus {
@@ -2390,15 +2390,15 @@ fieldset:disabled a.btn {
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #0051ff;
-  border-color: #0051ff;
+  background-color: #372b28;
+  border-color: #372b28;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0051ff;
-  border-color: #0051ff;
+  background-color: #372b28;
+  border-color: #372b28;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
@@ -2666,14 +2666,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #0051ff;
-  border-color: #0051ff;
+  color: #372b28;
+  border-color: #372b28;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #0051ff;
-  border-color: #0051ff;
+  background-color: #372b28;
+  border-color: #372b28;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -2681,15 +2681,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #0051ff;
+  color: #372b28;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0051ff;
-  border-color: #0051ff;
+  background-color: #372b28;
+  border-color: #372b28;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -2864,7 +2864,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-light:hover {
   color: #212529;
-  background-color: #FFFFFF;
+  background-color: #;
   border-color: #FFFFFF;
 }
 
@@ -2923,12 +2923,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #0051ff;
+  color: #372b28;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #0051ff;
+  color: #372b28;
   text-decoration: underline;
 }
 
@@ -3221,7 +3221,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #0051ff;
+  background-color: #372b28;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3580,8 +3580,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #0051ff;
-  background-color: #0051ff;
+  border-color: #372b28;
+  background-color: #372b28;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -3645,8 +3645,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #0051ff;
-  background-color: #0051ff;
+  border-color: #372b28;
+  background-color: #372b28;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3872,7 +3872,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #0051ff;
+  background-color: #372b28;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3902,7 +3902,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #0051ff;
+  background-color: #372b28;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3935,7 +3935,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #0051ff;
+  background-color: #372b28;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4024,6 +4024,12 @@ input[type="button"].btn-block {
   text-decoration: none;
 }
 
+.dropdown-item:hover {
+  color: #ffff;
+  background-color: #372b28;
+
+}
+
 .nav-link.disabled {
   color: #6c757d;
   pointer-events: none;
@@ -4074,7 +4080,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #0051ff;
+  background-color: #372b28;
 }
 
 .nav-fill > .nav-link,
@@ -4741,14 +4747,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #0051ff;
+  color: #372b28;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #0051ff;
+  color: #372b28;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -4774,8 +4780,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #0051ff;
-  border-color: #0051ff;
+  background-color: #372b28;
+  border-color: #372b28;
 }
 
 .page-item.disabled .page-link {
@@ -4858,7 +4864,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #0051ff;
+  background-color: #372b28;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
@@ -5163,7 +5169,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #0051ff;
+  background-color: #372b28;
   transition: width 0.6s ease;
 }
 
@@ -5250,8 +5256,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #0051ff;
-  border-color: #0051ff;
+  background-color: #372b28;
+  border-color: #372b28;
 }
 
 .list-group-item + .list-group-item {
@@ -6355,7 +6361,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #0051ff !important;
+  background-color: #372b28 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6425,7 +6431,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #44425A !important;
+  background-color: #bfa890 !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
@@ -6483,7 +6489,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #0051ff !important;
+  border-color: #372b28 !important;
 }
 
 .border-secondary {
@@ -9525,7 +9531,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #0051ff !important;
+  color: #372b28 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -9772,7 +9778,7 @@ h6,
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-  color: #0051ff;
+  color: #bfa890;
 }
 
 @media (max-width: 991.98px) {
@@ -9817,7 +9823,7 @@ h6,
 }
 
 .carousel-indicators .active {
-  background: #0051ff;
+  background: #372b28;
 }
 
 @media (max-width: 991.98px) {
@@ -9926,7 +9932,7 @@ h6,
   width: 15px;
   height: 15px;
   border-radius: 15px;
-  background: #0051ff;
+  background: #372b28;
 }
 
 .testimonial-carousel .owl-dot::after {
@@ -9936,7 +9942,7 @@ h6,
   right: -5px;
   bottom: -5px;
   left: -5px;
-  border: 2px solid #0051ff;
+  border: 2px solid #372b28;
   border-radius: 20px;
 }
 
