--- a/css/style.css
+++ b/css/style.css
@@ -9883,6 +9883,10 @@ h6,
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/thailand.jpg), no-repeat center center;
   background-size: cover;
 }
+.page-header-trading {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/trading.jpg), no-repeat center center;
+  background-size: cover;
+}
 
 
 .cat-item img {
