--- a/css/style.css
+++ b/css/style.css
@@ -9899,7 +9899,14 @@ h6,
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/trading.jpg), no-repeat center center;
   background-size: cover;
 }
-
+.page-header-tours {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/tours.jpg), no-repeat center center;
+  background-size: cover;
+}
+.page-header-ireland {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/ireland.jpg), no-repeat center center;
+  background-size: cover;
+}
 
 .cat-item img {
   transition: .5s;
