--- a/css/style.css
+++ b/css/style.css
@@ -11079,7 +11079,7 @@ h6,
 }
 
 .page-header-usa-study {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/usa/usa.jpg), no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/usa/usa-banner.jpg), no-repeat center center;
   background-size: cover;
 }
 
